[package]
name = "rtps-gen"
version = "0.2.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
edition = "2018"
description = "A command line tool reading RTPS IDL and generating corresponding Rust data types."
license = "Apache-2.0"
readme = "README.md"
keywords = ["RTPS", "DDS", "data-centric", "IDL", "generator"]
documentation = "https://docs.rs/rtps-gen"
homepage = "https://github.com/frehberg/rtps-gen.git"
repository = "https://github.com/frehberg/rtps-gen.git"
exclude = [
    "docs/*",
]

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
rtps-idl = { path = "crates/rtps-idl", version = "0.2.0" }
getopts = "0.2"

[dev-dependencies]
# TODO: should be dependency of rtps-message
rtps-elements = { path = "crates/rtps-elements", version = "0.2.0" }
