[package]
name = "rtps-idl-grammar"
description = "OMG RTPS IDL v4.0 grammar for pest"
version = "0.2.1"
authors = ["Frank Rehberger <frehberg@gmail.com>", "Kevin Pansky <kevin.pansky@gmail.com>"]
repository = "https://github.com/frehberg/rtps-gen"
documentation = "https://docs.rs/rtps-idl-grammar"
keywords = ["omg", "idl", "grammar", "parser"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
pest = "^1.0"
pest_derive = "^1.0"

