[package]
name = "rtps-idl"
version = "0.2.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
edition = "2018"
description = "RTPS IDL to Rust code generator library"
license = "Apache-2.0"
readme = "README.md"
keywords = ["RTPS", "DDS", "data-centric", "IDL", "generator"]
documentation = "https://docs.rs/rtps-gen"
homepage = "https://github.com/frehberg/rtps-gen.git"
repository = "https://github.com/frehberg/rtps-gen.git"

[dependencies]
pest = "^1.0"
rtps-idl-grammar = { path = "../rtps-idl-grammar", version = "0.2" }
log = { version = "0.4", features = ["std", "serde"] }
linked-hash-map = "^0.5"